lib/flux/apps/ai/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: AI
    gethomepage.dev/name: Open WebUI
    gethomepage.dev/description: Chat
    gethomepage.dev/icon: open-webui.png
spec:
  parentRefs: ${gateway_parent_refs}
  hostnames:
    - ${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 8080
